--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -2,6 +2,8 @@
   background-color: #f2f2f2;
   text-align: center;
   padding: 12px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .contactContainer div > h1 {
