--- a/src/Components/Education.css
+++ b/src/Components/Education.css
@@ -19,7 +19,7 @@
   align-items: center;
 }
 .card {
-  width: 25rem;
+  width: 20rem;
   border-radius: 1rem;
   background: white;
   box-shadow: 4px 4px 15px rgba(#000, 0.15);
@@ -38,6 +38,7 @@
   position: relative;
   text-align: left;
   text-align: justify;
+  margin: 0 auto;
 }
 
 .card .card__header {
@@ -92,5 +93,8 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+  }
+  .card{
+    width: 25rem;
   }
 }
