--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -61,6 +61,15 @@
   color: #666;
 }
 
+.timeline-content > p {
+  line-height: 1.25;
+  font-weight: 400;
+  color: #6e6e6e;
+  font-size: 16px;
+  text-align: justify;
+  letter-spacing: 1px;
+}
+
 .timeline-content h3 {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -71,13 +80,6 @@
 .timeline-content span {
   font-size: 15px;
   color: #a4a4a4;
-}
-
-.timeline-content p {
-  font-size: 14px;
-  line-height: 1.5em;
-  word-spacing: 1px;
-  color: #888;
 }
 
 @media screen and (max-width: 768px) {
