--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -15,15 +15,18 @@
   text-transform: uppercase;
 }
 .footerInfo h4 {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 .footerInfo > div {
-margin-bottom: 18px;
+  margin-bottom: 18px;
 }
-.footerInfo div > span {
+.footerInfo div > span > a {
   color: #f99417;
   font-size: 30px;
   font-weight: bold;
+}
+.socialMediaIconsContact {
+  margin-top: 12px;
 }
 .socialMediaIconsContact span {
   color: #f99417;
@@ -33,7 +36,7 @@ margin-bottom: 18px;
   margin-bottom: 30px;
 }
 .contantInfo h3 {
-    margin-bottom: 12px;
+  margin-bottom: 12px;
 }
 @media screen and (min-width: 800px) {
   .footerInfo {
